[package]
name = "rbatis-wrapper"
version = "0.1.1"
edition = "2024"
authors = ["CC <362228416@qq.com>"]
description = "一个基于 rbatis 的现代化查询构建器，类似于 MyBatis Plus 的链式查询风格"
license = "MIT"
repository = "https://github.com/362228416/rbatis-wrapper"
homepage = "https://github.com/362228416/rbatis-wrapper"
documentation = "https://docs.rs/rbatis-wrapper"
readme = "README.md"
keywords = ["rbatis", "orm", "database", "sql", "query-builder"]
categories = ["database", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
rbatis = { version = "4.6", features = ["debug_mode"] }